--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+        form {
+            display: block;
+            margin-top: 0;
+        }
+    </style>
 </head>
 
 <body>
@@ -79,6 +85,17 @@
 
                 <h3>Column 2</h3>
                 <p>Lets communicate <span class="glyphicon glyphicon-envelope"></span></p>
+                <!-- contact form -->
+                <form action="/action_page.php" method="get">
+                    <label for="fname">First name:</label>
+                    <input type="text" id="fname" name="fname"><br><br>
+                    <label for="lname">Last name:</label>
+                    <input type="text" id="lname" name="lname"><br><br>
+                    <label for="email  ">  Email:  </label>
+                    <input type="email" id="email"><br><br>
+                    <input type="submit" value="Submit">
+                </form>
+
             </div>
             <div class="col-sm-4 ">
                 <h3>Column 3</h3>
