--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </li>
 
             </ul>
-            <form class="navbar-form navbar-left" action="/action_page.php">
+            <form class="navbar-form navbar-left" action="action_page.php">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Search">
                 </div>
