--- a/index.html
+++ b/index.html
@@ -86,11 +86,10 @@
                 <h3>Column 2</h3>
                 <p>Lets communicate <span class="glyphicon glyphicon-envelope"></span></p>
                 <!-- contact form -->
-                <form action="/action_page.php" method="get">
-                    <label for="fname">First name:</label>
-                    <input type="text" id="fname" name="fname"><br><br>
-                    <label for="lname">Last name:</label>
-                    <input type="text" id="lname" name="lname"><br><br>
+                <form action="action_page.php" method="get">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name"><br><br>
+
                     <label for="email  ">  Email:  </label>
                     <input type="email" id="email"><br><br>
                     <input type="submit" value="Submit">
