--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h3>Column 2</h3>
                 <p>Lets communicate <span class="glyphicon glyphicon-envelope"></span></p>
                 <!-- contact form -->
-                <form action="action_page.php" method="">
+                <form action="action_page.php" method="POST">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name"><br><br>
 
